# penguify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  excerpt_getter.py  fetch_stories.py  generate_images.py  models.py  pyproject.toml  upload_to_s3.py
.github/workflows/: penguify.yaml
